# ai-personal-chatbot

./: .env  main.py  pyproject.toml  requirements.txt
api/: index.py
