    [project]
    name = "chat-bot-fastapi"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    requires-python = ">=3.12"
    dependencies = [
        "fastapi[standard]>=0.136.1",
        "google-generativeai>=0.8.6",
        "openai>=2.33.0",
        "python-dotenv>=1.2.2",
        "uvicorn>=0.46.0",
    ]

[project.scripts]
app = "api.index:app"

[tool.vercel]
entrypoint = "api/index.py"